# ROS2_PROJECTS

./: README.md
Final_Project - ROSMASTER X3 - Simulation/src/: 2025-ROS-Ressources
Final_Project - ROSMASTER X3 - Simulation/src/maps/: trc_arena.pgm  trc_arena.yaml
Final_Project - ROSMASTER X3 - Simulation/src/my_nav_pkg/: package.xml  setup.py
Final_Project - ROSMASTER X3 - Simulation/src/my_nav_pkg/config/: nav2_params.yaml
Final_Project - ROSMASTER X3 - Simulation/src/my_nav_pkg/launch/: x3_nav.launch.py
Final_Project - ROSMASTER X3 - Simulation/src/my_nav_pkg/my_nav_pkg/: qr_navigator_node.py
Final_Project - ROSMASTER X3 - Simulation/src/my_nav_pkg/rviz/: robot_view_yes.rviz
Final_Project - ROSMASTER X3 - Simulation/src/qr_scanners/: package.xml  setup.py
Final_Project - ROSMASTER X3 - Simulation/src/qr_scanners/qr_scanners/: qr_node.py
Final_Project - ROSMASTER X3 - Simulation/src/robot_bringup/: package.xml  setup.py
Final_Project - ROSMASTER X3 - Simulation/src/robot_bringup/launch/: bringup.launch.py
Final_Project - ROSMASTER X3 - Simulation/src/trc_navigation/: package.xml  setup.cfg  setup.py
Final_Project - ROSMASTER X3 - Simulation/src/trc_navigation/trc_navigation/: qr_navigator_node.py
Final_Project - ROSMASTER X3_ Reel/: README.md  nav2_params.yaml
Final_Project - ROSMASTER X3_ Reel/IMAGES_scannage_reel/: qr_log.csv
Final_Project - ROSMASTER X3_ Reel/src/drivers/yahboomcar_base_node/: CMakeLists.txt  package.xml
Final_Project - ROSMASTER X3_ Reel/src/drivers/yahboomcar_base_node/src/: base_node_X3.cpp
Final_Project - ROSMASTER X3_ Reel/src/drivers/yahboomcar_bringup/launch/: ekf_x1_x3_launch.py  yahboomcar_bringup_X3_launch.py
Final_Project - ROSMASTER X3_ Reel/src/drivers/yahboomcar_bringup/param/: ekf.yaml  ekf_x1_x3.yaml
Final_Project - ROSMASTER X3_ Reel/src/my_nav_pkg/: package.xml  setup.py
Final_Project - ROSMASTER X3_ Reel/src/my_nav_pkg/config/: .mapper_params_online_async.yaml.swp  mapper_params_online_async.yaml  nav2_params.yaml
Final_Project - ROSMASTER X3_ Reel/src/my_nav_pkg/launch/: x3_nav.launch.py
Final_Project - ROSMASTER X3_ Reel/src/my_nav_pkg/maps/: map_win.pgm  map_win.yaml
Final_Project - ROSMASTER X3_ Reel/src/my_nav_pkg/my_nav_pkg/: algo_win.py  algo_win_test.py
Final_Project - ROSMASTER X3_ Reel/src/my_nav_pkg/rviz/: trc.rviz
Final_Project - ROSMASTER X3_ Reel/src/qr_scanners/: setup.cfg  setup.py
Final_Project - ROSMASTER X3_ Reel/src/qr_scanners/qr_scanners/: qr_node.py
Final_Project - ROSMASTER X3_ Reel/src/trc_bringup/: package.xml  setup.py
Final_Project - ROSMASTER X3_ Reel/src/trc_bringup/launch/: pc_control_launch.py  pc_controly_launch.py  robot_real_launch.py  super_four.launch.py.py  super_one.launch.py.py  super_three.launch.py.py  super_two.launch.py.py
Final_Project - ROSMASTER X3_ Reel/src/udev rules/: usb.rules
Project 3 – Pathfinding Algorithm/: README.md
projet3_navigation/: Configurations nécessaires  README.md
