<?xml version="1.0"?>
<package format="3">
  <name>qr_scanners</name>
  <version>0.0.1</version>
  <description>QR code scanner for TRC simulation with position logging</description>
  <maintainer email="billy@todo.todo">billy</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>cv_bridge</depend>

  <exec_depend>pyzbar</exec_depend>
  <exec_depend>opencv-python</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

