<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>trc_bringup</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="billy@todo.todo">billy</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <exec_depend>yahboomcar_bringup</exec_depend>
  <exec_depend>rplidar_ros</exec_depend>
  <exec_depend>x3_description</exec_depend>
  <exec_depend>my_nav_pkg</exec_depend>
 <exec_depend>robot_localization</exec_depend> 

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
